# ad-ml

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: cd.yml  ci.yml
configs/: autobid_config.yaml  user_persona_config.yaml
scripts/: evaluate.py  export_model.py  train_autobid.py  train_user_persona.py
src/ad_ml/: __init__.py
src/ad_ml/config/: __init__.py  settings.py
src/ad_ml/data/: __init__.py  dataset.py  preprocessing.py  s3_loader.py
src/ad_ml/evaluation/: __init__.py  evaluator.py  metrics.py
src/ad_ml/features/: __init__.py  campaign_features.py  context_features.py  user_features.py
src/ad_ml/models/: __init__.py
src/ad_ml/models/autobid/: __init__.py  inference.py  model.py  trainer.py
src/ad_ml/models/user_persona/: __init__.py  inference.py  model.py  trainer.py
src/ad_ml/serving/: __init__.py  grpc_server.py
src/ad_ml/serving/proto/: inference.proto
src/ad_ml/utils/: __init__.py  experiment.py  logging.py
tests/: conftest.py
tests/integration/: test_training_pipeline.py
tests/unit/: test_autobid_model.py  test_metrics.py  test_preprocessing.py  test_user_persona_model.py
