[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ad-ml"
version = "0.1.0"
description = "Facebook Ad System ML Models - User Persona and Autobidding"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Jessica Wang", email = "jessicawang@fb.com"},
]

dependencies = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "scikit-learn>=1.3.0",
    "boto3>=1.28.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "protobuf>=4.24.0",
    "mlflow>=2.8.0",
    "pyyaml>=6.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "redis>=5.0.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.6.0",
    "flake8>=6.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "types-PyYAML>=6.0.12",
    "types-redis>=4.6.0",
]

[project.scripts]
train-persona = "scripts.train_user_persona:main"
train-autobid = "scripts.train_autobid:main"
evaluate = "scripts.evaluate:main"
export-model = "scripts.export_model:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
